--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
   <!-- Below line is handled by '@expo/configure-splash-screen' command and it's discouraged to modify it manually -->
-  <string name="app_name">Minke - DeFi Wallet</string>
+  <string name="app_name">Minke</string>
   <string name="expo_splash_screen_resize_mode" translatable="false">contain</string>
 </resources>
