Add Facebook App settings

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
   <!-- Below line is handled by '@expo/configure-splash-screen' command and it's discouraged to modify it manually -->
   <string name="expo_splash_screen_resize_mode" translatable="false">contain</string>
   <string name="app_name">Minke</string>
+	<string name="facebook_app_id">7724976524186737</string>
 </resources>
